; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22014.c_do_daemon.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22014.c_do_daemon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"Now run this exploit with the '-e' flag.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_daemon(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i64 (...) @fork()
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @run_daemon(i8* %6)
  br label %11

8:                                                ; preds = %1
  %9 = call i32 @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @_exit(i32 0) #3
  unreachable

11:                                               ; preds = %5
  ret void
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @run_daemon(i8*) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
